welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: not found: value o
	var nbAdos:Int=o
                       ^countTeen:13: error: type mismatch;
 found   : Unit
 required: Int
		 nbAdos=nbAdos+1
                       ^countTeen:12: error: type mismatch;
 found   : Unit
 required: Int
	if (d>=13 == true && d<=19 == true) {
        ^